--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous"
 referrerpolicy="no-referrer" />
 
-<link rel="stylesheet" href="style.css">
+<!-- <link rel="stylesheet" href="style.css"> -->
     <title>about</title>
   </head>
   <body style="background-color: rgb(154, 213, 215);">
@@ -155,6 +155,7 @@ referrerpolicy="no-referrer" />
   <!--Avatar-->
   <div class="avatar mx-auto mb-4">
   <img src="assets/avatar.png"
+  width="400px"
   class="rounded-circle img-fluid"
   alt="First sample avatar image">
   </div>
@@ -195,6 +196,7 @@ referrerpolicy="no-referrer" />
   <!--Avatar-->
   <div class="avatar mx-auto mb-4">
   <img src="assets/avatar.png"
+  width="400px"
   class="rounded-circle img-fluid"
   alt="Second sample avatar image">
   </div>
@@ -233,6 +235,7 @@ referrerpolicy="no-referrer" />
   <!--Avatar-->
   <div class="avatar mx-auto mb-4">
   <img src="assets/avatar.png"
+  width="400px"
   class="rounded-circle img-fluid"
   alt="Third sample avatar image">
   </div>
